FIX: Rectificar sobre el username y los ids, securizar los endpoints para verificar con Preauthorize si el entrenador y el atleta estan con una asignación activa.